# ecom-bot

./: .env.example  .gitignore  Makefile  README.md  app.py  app_lc.py  bot.py  order_db.py  pyproject.toml
data/: eval_prompts.txt  eval_rag_prompts.json  faq.json  few_shots_alex.jsonl  few_shots_pahom.jsonl  orders.json  style_guide.yaml
src/: bot.py  build_index.py  orders_db.py  persona.py  rag_eval.py  style_eval.py  utils.py
src/prompts/: examples.py  style_config.py
