[project]
name = "ecom-bot"
version = "0.1.0"
description = "A demonstration CLI application showcasing LangChain agents with tool integration for customer service automation"
authors = [
    {name = "E-commerce Bot Demo", email = "demo@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=5.2.0",
    "chromadb>=1.3.6",
    "click>=8.3.1",
    "emoji>=2.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0", 
    "ruff>=0.3.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long, handled by black

[project.scripts]
ecom-bot = "app:main"
